# OOP

./: .gitignore
lab_01/: CMakeLists.txt
lab_01/inc/: allocate.h  backup.h  draw.h  edges.h  error.h  events.h  figure.h  io.h  mainwindow.h  math_f.h  point.h  requests.h
lab_01/model/: model3.csv_backup.csv
lab_01/src/: allocate.cpp  backup.cpp  draw.cpp  edges.cpp  error.cpp  events.cpp  figure.cpp  io.cpp  main.cpp  mainwindow.cpp  math_f.cpp  point.cpp  requests.cpp
lab_01/ui/: MainWindow.ui
lab_02/: CMakeLists.txt  base_container.h  base_container.hpp  base_iterator.h  concepts.h  const_iterator.h  const_iterator.hpp  const_list_iterator.h  const_list_iterator.hpp  errors.h  iterator.h  iterator.hpp  list.h  list.hpp  list_item.hpp  list_iterator.h  list_iterator.hpp  list_node.h  list_node.hpp  main.cpp
